# game-mechanics-review

./: .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: bot.yaml  pytest.yaml
dev/: genindex.html  index.html  search.html  searchindex.js  sg_execution_times.html
dev/_sources/: sg_execution_times.rst.txt
dev/_static/: documentation_options.js
dev/api/: index.html  logging.html
dev/changes/: index.html  latest.html
gmr/: _base.py  _constants.py  _link.py  figure.py  link.py  text.py
