[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 64.0.0', 'setuptools_scm>=8']

[project]
authors = [
  {email = 'mathieu.scheltienne@gmail.com', name = 'Mathieu Scheltienne'},
]
classifiers = [
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: Unix',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
]
dependencies = [
  'click',
  'matplotlib',
  'numpy>=1.23,<3',
  'packaging',
  'psutil',
]
description = 'Python package to generate figures for a game mechanics review.'
dynamic = ["version"]
keywords = [
  'python',
  'game',
  'review',
]
license = {file = 'LICENSE'}
maintainers = [
  {email = 'mathieu.scheltienne@gmail.com', name = 'Mathieu Scheltienne'},
]
name = 'gmr'
readme = 'README.md'
requires-python = '>=3.12'

[project.optional-dependencies]
all = [
  'gmr[build]',
  'gmr[style]',
  'gmr[test]',
]
build = [
  'build',
  'twine',
]
full = [
  'gmr[all]',
]
style = [
  'bibclean',
  'codespell[toml]>=2.2.4',
  'pre-commit',
  'ruff>=0.6.0',
  'toml-sort',
  'yamllint',
]
test = [
  'pytest-cov',
  'pytest-timeout',
  'pytest>=8.0',
]

[project.scripts]
gmr = 'gmr.commands.main:run'

[project.urls]
source = 'https://github.com/mscheltienne/game-mechanics-review'
tracker = 'https://github.com/mscheltienne/game-mechanics-review/issues'

[tool.codespell]
check-filenames = true
check-hidden = true
ignore-words = '.codespellignore'
skip = 'build,.git,.mypy_cache,.pytest_cache,.venv'

[tool.coverage.report]
exclude_lines = [
  'if __name__ == .__main__.:',
  'if TYPE_CHECKING:',
  'pragma: no cover',
]
precision = 2

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
  '**/__init__.py',
  '**/conftest.py',
  '**/gmr/utils/_fixes.py',
  '**/tests/**',
]

[tool.pytest.ini_options]
addopts = ['--color=yes', '--cov-report=', '--durations=20', '--junit-xml=junit-results.xml', '--strict-config', '--tb=short', '-ra', '-v']
junit_family = 'xunit2'
minversion = '8.0'

[tool.ruff]
extend-exclude = []
line-length = 88

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = []
select = ['A', 'B', 'D', 'E', 'F', 'G', 'I', 'LOG', 'NPY', 'PIE', 'PT', 'T20', 'UP', 'W']

[tool.ruff.lint.per-file-ignores]
'*' = [
  'B904',  # 'Within an except clause, raise exceptions with raise ... from ...'
  'D100',  # 'Missing docstring in public module'
  'D104',  # 'Missing docstring in public package'
  'D107',  # 'Missing docstring in __init__'
]
'*.pyi' = ['E501']
'__init__.py' = ['F401']
'tutorials/*' = ['D205', 'D400', 'T201']

[tool.ruff.lint.pydocstyle]
convention = 'numpy'
ignore-decorators = ["gmr.utils._docs.copy_doc"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ['gmr*tests']
include = ['gmr*']

[tool.setuptools_scm]
version_file = "gmr/_version.py"
version_scheme = "release-branch-semver"

[tool.tomlsort]
all = true
ignore_case = true
spaces_before_inline_comment = 2
trailing_comma_inline_array = true
